[gd_scene load_steps=9 format=2]

[ext_resource path="res://Cenas/Puzzle_Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Cenas/Puzzle_Spot.tscn" type="PackedScene" id=2]
[ext_resource path="res://Cenas/Puzzle_Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Cenas/Puzzle_Box.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=5]
[ext_resource path="res://Assets/fonte_1.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scripts/Puzzle_Spot.gd" type="Script" id=7]

[sub_resource type="Theme" id=1]
default_font = ExtResource( 6 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )
cont = "5"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -118, 0 )
anchor_mode = 0
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 128, 128 )

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 16 )

[node name="Group_Walls" type="Node2D" parent="."]
position = Vector2( 256, -64 )

[node name="Wall4" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 128, 384 )

[node name="Wall49" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 256, 256 )

[node name="Wall50" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -64, 192 )

[node name="Wall51" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 256, 192 )

[node name="Wall53" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 256, 320 )

[node name="Wall55" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 128, 256 )

[node name="Wall6" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 256, 384 )

[node name="Wall7" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 128, 128 )

[node name="Wall10" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 256, 128 )

[node name="Wall11" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 192, 128 )

[node name="Wall12" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 0, 128 )

[node name="Wall13" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 64, 128 )

[node name="Wall16" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -192, 128 )

[node name="Wall14" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -128, 128 )

[node name="Wall24" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 192, 384 )

[node name="Wall26" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 0, 448 )

[node name="Wall27" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 128, 448 )

[node name="Wall28" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -64, 384 )

[node name="Wall29" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -64, 448 )

[node name="Wall31" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -128, 384 )

[node name="Wall15" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -64, 128 )

[node name="Wall32" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -192, 384 )

[node name="Wall33" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -64, 256 )

[node name="Wall35" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( 64, 448 )

[node name="Wall36" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -256, 384 )

[node name="Wall37" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -256, 320 )

[node name="Wall38" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -256, 256 )

[node name="Wall39" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -256, 192 )

[node name="Wall40" parent="Group_Walls" instance=ExtResource( 3 )]
position = Vector2( -256, 128 )

[node name="Spots" type="Node2D" parent="."]
position = Vector2( 48, 16 )

[node name="Spot2" parent="Spots" instance=ExtResource( 2 )]
position = Vector2( 208, 112 )
script = ExtResource( 7 )

[node name="Spot3" parent="Spots" instance=ExtResource( 2 )]
position = Vector2( 336, 112 )
script = ExtResource( 7 )

[node name="Boxes" type="Node2D" parent="."]
position = Vector2( -16, -16 )

[node name="Box2" parent="Boxes" groups=[
"box_type_1",
] instance=ExtResource( 4 )]
position = Vector2( 144, 272 )

[node name="RayCast2D" type="RayCast2D" parent="Boxes/Box2"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 16 )

[node name="Box3" parent="Boxes" groups=[
"box_type_1",
] instance=ExtResource( 4 )]
position = Vector2( 144, 208 )

[node name="RayCast2D" type="RayCast2D" parent="Boxes/Box3"]
position = Vector2( 8, 8 )
cast_to = Vector2( 0, 16 )

[node name="Ui" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remaining_Moves" type="Label" parent="Ui"]
margin_right = 216.0
margin_bottom = 29.0
rect_scale = Vector2( 1.052, 1.426 )
custom_fonts/font = ExtResource( 6 )
text = "PASSOS RESTANTES: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinDialog" type="AcceptDialog" parent="Ui"]
margin_left = 16.0
margin_right = 168.0
margin_bottom = 75.0
rect_scale = Vector2( 0.880001, 0.92 )
window_title = "Nível Concluído!"
dialog_text = "Clique para avançar
para a próxima fase."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoseDialog" type="AcceptDialog" parent="Ui"]
margin_left = 16.0
margin_right = 189.0
margin_bottom = 75.0
rect_scale = Vector2( 0.880001, 0.92 )
window_title = "Sem movimentos :("
dialog_text = "Clique para recomeçar
o nível."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Spots/Spot2" to="Spots/Spot2" method="_on_Spot_body_entered"]
[connection signal="body_exited" from="Spots/Spot2" to="Spots/Spot2" method="_on_Spot_body_exited"]
[connection signal="body_entered" from="Spots/Spot3" to="Spots/Spot3" method="_on_Spot_body_entered"]
[connection signal="body_exited" from="Spots/Spot3" to="Spots/Spot3" method="_on_Spot_body_exited"]
[connection signal="confirmed" from="Ui/WinDialog" to="." method="_on_WinDialog_confirmed"]
[connection signal="confirmed" from="Ui/LoseDialog" to="." method="_on_LoseDialog_confirmed"]
